# auto_coding

./: BENCHMARK_RESULTS.md  FINAL_REPORT.md  PERFORMANCE_REPORT.md  README.md  TENSORRT_PLUGIN_GUIDE.md  benchmark_cudnn_comparison.py  benchmark_fmha.py  benchmark_output.txt  benchmark_results.json  fmha_operator.py  requirements.txt  results.json  run_benchmarks.py  test_corrected.py  test_fmha.py  triton_fmha.py  triton_fmha_corrected.py
tensorrt_plugin/: CMakeLists.txt  QUICKSTART.md  README.md  build.sh  fmha_kernel.cu  fmha_plugin.cpp  fmha_plugin.h  test_fmha_plugin.py
